--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.6.7
 South==1.0
+django-admin-bootstrapped==2.0.5
+django-crispy-forms==1.4.0
 django-localflavor==1.0
 django-localflavor-br==1.0
 django-registration==1.0
